# simba_spectra

./: .gitignore  CMakeLists.txt  main.cpp  types.hpp  utils.cpp
data/: CMakeLists.txt  main.cpp  types.hpp  utils.hpp
data/pcap_reader/includes/: ethernet.hpp  file_reader.hpp  ipv4.hpp  layer.hpp  packet.hpp  raw_buffer.hpp  types.hpp  udp.hpp  view.hpp
simba_parser/packet/: types.hpp
simba_parser/packet/incremental/: incremental.cpp  incremental.hpp
simba_parser/packet/market_data/: market_data.cpp  market_data.hpp
simba_parser/sbe_message/: fix_message_types.hpp  types.hpp
simba_parser/sbe_message/deserializer/: deserializer.cpp  deserializer.hpp
simba_parser/sbe_message/parser/: parser.hpp
simba_parser/sbe_message/parser/incremental/: parser.cpp  parser.hpp
simba_parser/sbe_message/parser/snapshot/: parser.cpp  parser.hpp
simba_parser/utils/: bytes_swap.hpp  deserialize.hpp
utils/: bytes_swap.hpp
